@@ -15,8 +15,6 @@ Stable release mustn't use DISABLE_DEPRECATED.
 
 dnotify: should wait a little before rescanning.
 
-GtkTreeView bindings (eg, ^N) override menu bindings.
-
 Escape text/uri-list.
 
 Sorting by group/user should use name (Bernard Jungen).
