@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+12-Apr-2003
+~~~~~~~~~~~
+Remove default GtkTreeView keys (they conflicted with the menus).
+Fixed some minor cursor problems in List view.
+
 10-Apr-2003
 ~~~~~~~~~~~
 Winking now works in List view.
